--- a/index.html
+++ b/index.html
@@ -91,56 +91,56 @@
                 <hr color = "black" size = 3><br>
                 <div class="galeria-port">
                     <div class="imagen-port">
-                        <img src="img/img7.jpg" alt="">
+                        <img src="img/Consultoría 1.png" alt="">
                         <div class="hover-galeria">
                             <img src="img/Consultoría.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img2.png" alt="">
+                        <img src="img/IA 1.png" alt="">
                         <div class="hover-galeria">
                             <img src="img/IA icono.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img3.png" alt="">
+                        <img src="img/Apps 1.png" alt="">
                         <div class="hover-galeria">
                             <img src="img/Apps icono.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img4.png" alt="">
+                        <img src="img/Desarrollo de software 1.png" alt="">
                         <div class="hover-galeria">
                             <img src="img/desarrollo de software.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img5.png" alt="">
+                        <img src="img/Desarrollo de software 2.png" alt="">
                         <div class="hover-galeria">
                             <img src="img/Consultoría.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img6.png" alt="">
+                        <img src="img/Consultoría 2.png" alt="">
                         <div class="hover-galeria">
                             <img src="img/IA icono.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img7.jpg" alt="">
+                        <img src="img/IA 2.png" alt="">
                         <div class="hover-galeria">
                             <img src="img/Apps icono.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img8.jpg" alt="">
+                        <img src="img/Apps 2.png" alt="">
                         <div class="hover-galeria">
                             <img src="img/desarrollo de software.png" alt="">
                             <p>Nuestro trabajo</p>
@@ -194,7 +194,7 @@
                 <div class="footer__icons">
                     
                     <span class="footer__container-icons">
-                        <a class="fab fa-facebook footer__icon" href="https://www.facebook.com"></a>
+                        <a class="fab fa-facebook footer__icon" href="#"></a>
                     </span>
                     <span class="footer__container-icons">
                         <a class="fab fa-twitter footer__icon" href="#"></a>
